Updated backendservice-deploy and -configure

--- a/battles/templates/default/backendservice.cfg.erb
+++ b/battles/templates/default/backendservice.cfg.erb
@@ -1,6 +1,6 @@
 [game]
-gameid=battles_test
-serviceid=matchmaker
+gameid=<%= @gameid %>
+serviceid=<%= @serviceid %>
 
 [mongodb]
 host=<%= @mongodbhost %>
