--- a/battles/templates/default/turnserverconfig.js.erb
+++ b/battles/templates/default/turnserverconfig.js.erb
@@ -41,8 +41,7 @@ global.SETTINGS = {
 
 	// Our unique gameid
 	gameid:gamename,
-
-
+	pushcertid:"battlesproto",
 
 
 	// The api key for the game
@@ -85,7 +84,7 @@ global.SETTINGS = {
     dbg:0,
 
 	servicetype:"nodejs",
-	serviceid:"NOT_SET",
+	serviceid:"webnodejs",
 
     sandbox:0,
 	defaultlang : 'en',
