--- a/battles/templates/default/turnserverconfig.js.erb
+++ b/battles/templates/default/turnserverconfig.js.erb
@@ -109,6 +109,8 @@ global.SETTINGS = {
 	ai_num_matches_threshold:10,
 	matches_needed_for_ranking:10,
 	elo_score_needed_for_ranking:800,
-	gcmmessagefield:'message'
+	gcmmessagefield:'message',
+	debugLogPath:'<%= @debuglog %>',
+	errorLogPath:'<%= @errorlog %>'
 
 };
