--- a/battles/templates/default/turnserverconfig.js.erb
+++ b/battles/templates/default/turnserverconfig.js.erb
@@ -110,7 +110,7 @@ global.SETTINGS = {
 	matches_needed_for_ranking:10,
 	elo_score_needed_for_ranking:800,
 	gcmmessagefield:'message',
-	debugLogPath:'<%= @debuglog %>',
-	errorLogPath:'<%= @errorlog %>'
+	debugLogPath:'<%= @logpath %>/debug.log',
+	errorLogPath:'<%= @logpath %>/error.log'
 
 };
